@@ -1,7 +1,11 @@
 package com.streaming.content.service.impl;
 
+import com.streaming.common.dto.RatingStatsDTO;
 import com.streaming.common.dto.SongResponse;
 import com.streaming.common.event.ContentCreatedEvent;
+import com.streaming.common.event.SongDeletedEvent;
+import com.streaming.common.event.UserActivityEvent;
+import com.streaming.content.client.RatingClient;
 import com.streaming.content.dto.*;
 import com.streaming.content.model.Album;
 import com.streaming.content.model.Artist;
@@ -14,6 +18,7 @@ import com.streaming.content.service.HdfsStorageService;
 import com.streaming.content.util.ContentMapper;
 import jakarta.ws.rs.ServiceUnavailableException;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.hadoop.fs.Path;
 import org.jaudiotagger.audio.AudioFile;
 import org.jaudiotagger.audio.AudioFileIO;
@@ -22,6 +27,7 @@ import org.jaudiotagger.audio.exceptions.CannotReadException;
 import org.jaudiotagger.audio.exceptions.InvalidAudioFrameException;
 import org.jaudiotagger.audio.exceptions.ReadOnlyFileException;
 import org.jaudiotagger.tag.TagException;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -29,26 +35,32 @@ import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 import org.apache.hadoop.fs.FileSystem;
 
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.nio.file.Files;
+import java.time.Duration;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 @RequiredArgsConstructor
 public class ContentServiceImpl implements ContentService {
 
     private final AlbumRepository albumRepository;
     private final SongRepository songRepository;
     private final ArtistRepository artistRepository;
-    private final KafkaTemplate<String, ContentCreatedEvent> kafkaTemplate;
+    private final KafkaTemplate<String, Object> kafkaTemplate;
     private final ContentMapper mapper;
     private final HdfsStorageService hdfsStorageService;
     private final FileSystem fileSystem;
+    private final RatingClient ratingClient;
+    private final KafkaTemplate<String, Object> genericKafkaTemplate;
+    private final RedisTemplate<String, byte[]> redisTemplate;
+  
+    private static final String CACHE_PREFIX = "audio_cache::";
 
     private static final List<String> ALLOWED_MIME_TYPES = List.of("audio/mpeg", "audio/wav", "audio/ogg");
     private static final List<String> ALLOWED_EXTENSIONS = List.of(".mp3", ".wav", ".ogg");
@@ -82,6 +94,18 @@ public class ContentServiceImpl implements ContentService {
                 .stream()
                 .map(mapper::toResponse)
                 .collect(Collectors.toList());
+    }
+
+    public ArtistAlbumsResponse getArtistWithAlbums(String artistId) {
+        Artist artist = artistRepository.findById(artistId)
+                .orElseThrow(() -> new RuntimeException("Artist not found"));
+
+        List<AlbumResponse> albums = albumRepository.findByArtistIdsContaining(artistId)
+                .stream()
+                .map(mapper::toResponse)
+                .collect(Collectors.toList());
+
+        return new ArtistAlbumsResponse(artist.getId(), artist.getName(), albums);
     }
 
     public List<AlbumResponse> getAllAlbums() {
@@ -193,14 +217,21 @@ public class ContentServiceImpl implements ContentService {
         return mapper.toResponse(saved);
     }
 
+    @Transactional
     public void deleteSong(String songId) {
-        if (!songRepository.existsById(songId)) {
-            throw new RuntimeException("Song not found");
+        Song song = songRepository.findById(songId)
+                .orElseThrow(() -> new RuntimeException("Song not found"));
+
+        String hdfsPath = song.getAudioFilePath();
+
+        songRepository.deleteById(songId);
+
+        if (hdfsPath != null) {
+            hdfsStorageService.deleteFile(hdfsPath);
         }
 
-        // REQ 1.14 & 2.13 (SAGA PATTERN START)
-        // 1. Delete locally
-        songRepository.deleteById(songId);
+        log.info("Emitting SongDeletedEvent for ID: {}", songId);
+        kafkaTemplate.send("song-deleted-topic", new SongDeletedEvent(songId, hdfsPath));
     }
 
     public List<SongResponse> getAllSongs() {
@@ -210,20 +241,66 @@ public class ContentServiceImpl implements ContentService {
                 .collect(Collectors.toList());
     }
 
-    public SongResponse getSongById(String id) {
+    public SongResponse getSongById(String id, String userId) {
         try {
             if(Objects.equals(id, "67")) {Thread.sleep(4500);}
             Song song = songRepository.findById(id)
                     .orElseThrow(() -> new RuntimeException("Song not found with ID: " + id));
-            return mapper.toResponse(song);
+            SongResponse response = mapper.toResponse(song);
+
+            // API COMPOSITION
+            try {
+                RatingStatsDTO stats = ratingClient.getStats(id, userId);
+
+                response.setAverageRating(stats.getAverageRating());
+                response.setTotalRatings(stats.getTotalRatings());
+                response.setUserRating(stats.getUserRating());
+            } catch (Exception e) {
+                log.error("Greška pri dovlačenju rejtinga: {}", e.getMessage());
+                response.setAverageRating(0.0);
+                response.setTotalRatings(0L);
+                response.setUserRating(0);
+            }
+
+            return response;
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-            throw new ServiceUnavailableException();}
+            throw new ServiceUnavailableException();
+        }
     }
 
-    public InputStream getSongAudioStream(String songId) {
+    public InputStream getSongAudioStream(String songId, String userId) {
         Song song = songRepository.findById(songId)
                 .orElseThrow(() -> new RuntimeException("Song not found"));
+
+        String cacheKey = CACHE_PREFIX + songId;
+        byte[] cachedAudio = redisTemplate.opsForValue().get(cacheKey);
+
+        if (cachedAudio != null) {
+            log.info("Serving from Redis cache: {}", songId);
+
+            return new ByteArrayInputStream(cachedAudio);
+        }
+
+        if (userId != null) {
+            Map<String, Object> payload = new HashMap<>();
+            payload.put("songId", songId);
+            payload.put("title", song.getTitle());
+            payload.put("genre", song.getGenre() != null ? song.getGenre() : "Unknown");
+
+            List<String> artistNames = song.getArtistIds().stream()
+                    .map(id -> {
+                        return artistRepository.findById(id)
+                                .map(Artist::getName)
+                                .orElse("Nepoznat Izvođač (" + id + ")");
+                    })
+                    .collect(Collectors.toList());
+
+            payload.put("artistNames", artistNames);
+
+            UserActivityEvent event = new UserActivityEvent(userId, "SONG_LISTENED", payload);
+            kafkaTemplate.send("user-activities", event);
+        }
 
         String hdfsPathStr = song.getAudioFilePath();
         if (hdfsPathStr == null) {
@@ -235,18 +312,49 @@ public class ContentServiceImpl implements ContentService {
             if (!fileSystem.exists(path)) {
                 throw new FileNotFoundException("File missing in HDFS: " + hdfsPathStr);
             }
+            try (InputStream hdfsStream = fileSystem.open(path)) {
+                byte[] audioBytes = hdfsStream.readAllBytes();
 
-            return fileSystem.open(path);
+                redisTemplate.opsForValue().set(cacheKey, audioBytes, Duration.ofHours(24));
+                log.info("Saved to Redis cache: {}", songId);
+
+                return new ByteArrayInputStream(audioBytes);
+            }
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
-    public List<SongResponse> getSongsInAlbum(String albumId) {
-        return songRepository.findByAlbumId(albumId)
+    public List<SongResponse> getSongsInAlbum(String albumId, String userId) {
+
+        List<SongResponse> responses = songRepository.findByAlbumId(albumId)
                 .stream()
                 .map(mapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        List<String> songIds = responses.stream()
+                .map(SongResponse::getId)
+                .toList();
+
+        // API Composition
+        try {
+            if (!songIds.isEmpty()) {
+                Map<String, RatingStatsDTO> statsMap = ratingClient.getBulkStats(songIds, userId);
+
+                responses.forEach(res -> {
+                    RatingStatsDTO stats = statsMap.get(res.getId());
+                    if (stats != null) {
+                        res.setAverageRating(stats.getAverageRating());
+                        res.setTotalRatings(stats.getTotalRatings());
+                        res.setUserRating(stats.getUserRating());
+                    }
+                });
+            }
+        } catch (Exception e) {
+            log.error("Failed to fetch ratings for album {}: {}", albumId, e.getMessage());
+        }
+
+        return responses;
     }
 
     private void validateFile(MultipartFile file) {
